--- a/game.html
+++ b/game.html
@@ -13,12 +13,12 @@
         </div>
 
         <div class="quiz">
-            <h2 class="question">Your Question</h2>
+            <h2 class="question"></h2>
             <div class="answers">
-                <div class="answer" data-number="1">Answer</div>
-                <div class="answer" data-number="2">Answer</div>
-                <div class="answer" data-number="3">Answer</div>
-                <div class="answer" data-number="4">Answer</div>
+                <div class="answer" data-number="1"></div>
+                <div class="answer" data-number="2"></div>
+                <div class="answer" data-number="3"></div>
+                <div class="answer" data-number="4"></div>
             </div>
         </div>
 
