Work in progress

--- a/game.html
+++ b/game.html
@@ -25,8 +25,8 @@
         <a class="next">Next</a>
 
         <div class="pop-up">
-          <h2>Bro, you dull o!</h2>
-
+          <h2 class="pop-text">Bro, you dull o!</h2>
+          <p>Out of 3 questions you no fit score 2. Better go and collect your school fees back.</p>
           <button class="jp">JAPA!!!</button>
           <button class="continue">Continue embrassing yourself</button>
         </div>
