--- a/homepage.html
+++ b/homepage.html
@@ -8,12 +8,12 @@
   <body>
     <main>
         <h2>Hi there...</h2>
-        <p>Last chance to drop out</p>
+        <p>Last chance to drop out <span id="name">name</span></p>
         <p>You're about to embark on a journey of no return, think twice before you click any button</p>
         <a href="#" class="exit">NOT FOR ME</a>
         <a href="game.html" class="enter">I AM SMART</a>
     </main>
   </body>
 
-  <!-- <script src="script/main.js"></script> -->
+  <script src="script/homepage.js"></script>
 </html>
