--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <main>
         <h2 class="question">IQ Test</h2>
         <p>Do you think you're smart?</p>
-        <p>Agree to the terms and condition to proceed</p>
+        <!-- <p>Agree to the terms and condition to proceed</p> -->
         
-        <div class="agreeBox">
-          <input type="checkbox" id="agree">
-          <label for="agree" class="agree">Click to view the Terms and Condition</label>
-        </div>
-  
+        <form id="username">
+          <input type="text" id="name" placeholder="What’s your name Einstient?">
+          <div class="agreeBox">
+            <p class="agree">Click to view the Terms and Condition</p>
+          </div>
+        </form>
+        <button href="homepage.html" class="enter" disabled>ENTER</button>
+
         <div class="pop-up">
           <span class="cancel">X</span>
           <h1>Terms and condition</h1>
@@ -26,8 +29,6 @@
           <p>To complete this IQ test successuful, you've to pass all questions correctly</p>
           <p>Lastly, you might experience dangerous thing.</p>
         </div>
-
-        <a href="homepage.html" class="enter">ENTER</a>
     </main>
   </body>
 
