--- a/game.html
+++ b/game.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles/game.css" >
   </head>
   <body>
-    <main>
+    <div class="loader"></div>
+    <main class="game">
         <div class="score-board">
             <p>Score</p>
             <div class="score">0</div>
