--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FrontEnd Task 4</title>
+    <title>Game</title>
     <link rel="stylesheet" href="styles/game.css" >
   </head>
   <body>
