--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FrontEnd Task 4</title>
+    <title>Quiz App</title>
     <link rel="stylesheet" href="styles/main.css" >
   </head>
   <body>
